--- a/projects/ng-aquila/src/tabs/tab-nav-bar.scss
+++ b/projects/ng-aquila/src/tabs/tab-nav-bar.scss
@@ -66,6 +66,10 @@ $padding-bottom: nx-spacer(2xs) - nx-border-size(m);
 
   a.nx-tab-link.is-active {
     @include var(border-color, tab-item-border-color);
+
+    @media screen and (-ms-high-contrast: active) {
+      border-color: highlight;
+    }
   }
 }
 
@@ -117,6 +121,12 @@ $padding-bottom: nx-spacer(2xs) - nx-border-size(m);
   &:not(.is-expert) ::ng-deep .nx-tab-link:not(.is-disabled):focus  {
     @include focus-style;
     border-radius: nx-border-radius(s);
+
+    @media screen and (-ms-high-contrast: active) {
+      // hide doubled box-shadow + outline for edge chromium
+      // (both visible there because of high-contrast-adjust: none)
+      outline-width: 0px; 
+    }
   }
 
   &.is-expert ::ng-deep .nx-tab-link:not(.is-disabled):focus {
@@ -130,6 +140,12 @@ $padding-bottom: nx-spacer(2xs) - nx-border-size(m);
 
       @include focus-style;
       border-radius: nx-border-radius(s);
+
+      @media screen and (-ms-high-contrast: active) {
+        // hide doubled box-shadow + outline for edge chromium
+        // (both visible there because of high-contrast-adjust: none)
+        outline-width: 0px; 
+      }
     }
   }
 }
